# crappy-user

./: .env.local  .gitignore  Cargo.toml  Makefile  README.md  dev_comments.md
blog_guide/: BlogGuide.md  developing_comments.md
src/: lib.rs  main.rs
src/application/: authenticate_user_application.rs  authenticate_user_command_handler.rs  mod.rs  register_user.rs  register_user_command.rs  register_user_command_handler.rs  user_credentials_aggregator.rs
src/config/: configuration.rs
src/domain/: authenticate_user_command.rs  mod.rs  register_user_command.rs  user.rs  user_authentication_failed_event.rs  user_command.rs  user_credentials_view.rs  user_domain_error.rs  user_domain_event.rs  user_email.rs  user_event.rs  user_event_store_repository.rs  user_id.rs  user_list_view.rs  user_password.rs  user_read_model.rs  user_registered_event.rs  user_successfully_authenticated_event.rs  user_tests.rs  user_view_repository.rs
src/domain/shared/: domain_event.rs  event_sourced_aggregate.rs  event_store_interface.rs
src/infrastructure/: actix.rs
src/infrastructure/aggregator_subs/: README.md
src/infrastructure/controllers/: authenticate_user_controller.rs  generate_credentials_view_controller.rs  health_check_controller.rs  mod.rs  register_user_controller.rs  responses.rs
src/infrastructure/persistence/: serialized_events.rs
src/infrastructure/persistence/event_store/: event_store.rs
src/infrastructure/persistence/postgres/: event_store.rs  event_store_postgres.rs  user_view_repository_postgres.rs
src/infrastructure/persistence/postgres/migrations/: 20220801141156_create_event_store.sql  20220801141630_create_users_view.sql  20221011155013_read_model_user_data.sql  20221011155540_user_credentials_add_uuid_column.sql
src/infrastructure/telemetry/: telemetry.rs
