[package]
name = "crappy-user"
version = "0.1.0"
edition = "2021"
authors = ["Cesc JR <francesc.travesa@gmail.com>"]


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "crappy-user"

[dependencies]
actix-web = "4.0.0"
#tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
log = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
config = "0.13.1"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
email_address = "0.2.1"
password-hash = "0.4.2"
rand = "0.8.5"
argon2 = "0.4.1"
cqrs-es = "0.4.2"
async-trait = "0.1.52"
postgres-es = "0.4.4"
chrono = { version="0.4.15", features = ["serde"]  }
futures = "0.3.23"
enum_dispatch = "0.3.8"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
#    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "json"
]

[dev-dependencies]
claim = "0.5"
